fungible token web button tweak; copy address overlap issue; switchblade added to web; web tx list overhaul

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="VFX Web Wallet">
+  <meta name="apple-mobile-web-app-title" content="VFX Wallet">
   <link rel="apple-touch-icon" href="android-icon-192x192-seochecker-007.gif">
 
   <meta name="description"
@@ -59,7 +59,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>VFX Web Wallet</title>
+  <title>VFX Wallet</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="splash/splash.css">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
