btc tx update; common actions update; og data for web

--- a/web/index.html
+++ b/web/index.html
@@ -33,28 +33,23 @@
   <meta name="apple-mobile-web-app-title" content="VFX Wallet">
   <link rel="apple-touch-icon" href="android-icon-192x192-seochecker-007.gif">
 
-  <meta name="description"
-    content="Your Block. Your Data. Your NFT Reserved. An open-source decentralized NFT centric blockchain for everyone.">
+  <meta name="description" content="Tokenized Commerce and Self-Custody for Everyone">
   <meta name="keywords"
-    content="reserveblock, reserve block, blockchain, nft, decentralized, crypto, open-source, on-chain functions, smart contract, wallet, network, dex, metaverse">
+    content="vfx, verifiedx, tokenization, rbx reserveblock, reserve block, blockchain, nft, decentralized, crypto, open-source, on-chain functions, smart contract, wallet, network, dex, metaverse, webwallet">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta property="og:title" content="ReserveBlock">
-  <meta property="og:site_name" content="ReserveBlock">
+  <meta property="og:title" content="VFX Wallet">
+  <meta property="og:site_name" content="VerifiedX">
 
-  <meta property="og:description"
-    content="Your Block. Your Data. Your NFT Reserved. An open-source decentralized NFT centric blockchain for everyone.">
+  <meta property="og:description" content="Tokenized Commerce and Self-Custody for Everyone">
   <meta property="og:type" content="website">
-  <meta property="og:image"
-    content="https://firebasestorage.googleapis.com/v0/b/rbx-storage.appspot.com/o/reserveblock.jpg?alt=media">
+  <meta property="og:image" content="/ogv2.jpg">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@reserveblockio">
-  <meta name="twitter:title" content="ReserveBlock">
-  <meta name="twitter:description"
-    content="Your Block. Your Data. Your NFT Reserved. An open-source decentralized NFT centric blockchain for everyone.">
-  <meta name="twitter:image"
-    content="https://firebasestorage.googleapis.com/v0/b/rbx-storage.appspot.com/o/reserveblock.jpg?alt=media">
+  <meta name="twitter:site" content="@vfxblockchain">
+  <meta name="twitter:title" content="VFX">
+  <meta name="twitter:description" content="Tokenized Commerce and Self-Custody for Everyone">
+  <meta name="twitter:image" content="/ogv2.jpg">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
