--- a/web/index.html
+++ b/web/index.html
@@ -86,7 +86,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement("script");
-      scriptTag.src = "main.dart.js?version=5.1.15";
+      scriptTag.src = "main.dart.js?version=5.1.15b";
       scriptTag.type = "application/javascript";
       document.body.append(scriptTag);
     }
