- Fixed bug when you try to restore accounts but have zero hidden - Ensure that that the snapshot prompt is only shown once per session - Hooking into the cmd+q and alt-f4 to close the CLI before terminating the app

--- a/web/index.html
+++ b/web/index.html
@@ -86,7 +86,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement("script");
-      scriptTag.src = "main.dart.js?version=5.0.1b";
+      scriptTag.src = "main.dart.js?version=5.0.1d";
       scriptTag.type = "application/javascript";
       document.body.append(scriptTag);
     }
