help links within web dashboard

--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
 
 
   <script src="assets/assets/js/keygen-v3.js?v=5.0.0" defer=""></script>
-  <script src="assets/assets/js/btc.js?v=5.0.0" defer=""></script>
+  <script src="assets/assets/js/btc.js?v=5.0.2" defer=""></script>
   <script src="assets/assets/js/btc-mainnet.js?v=5.0.0" defer=""></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
@@ -86,7 +86,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement("script");
-      scriptTag.src = "main.dart.js?version=5.0.2d";
+      scriptTag.src = "main.dart.js?version=5.0.2f";
       scriptTag.type = "application/javascript";
       document.body.append(scriptTag);
     }
