moon pay web integration

--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@
     <div id="splash-loading">Loading...</div>
   </div>
 
-
+  <script src="assets/assets/js/moonpay.js?v=5.0.0" defer=""></script>
   <script src="assets/assets/js/keygen-v3.js?v=5.0.0" defer=""></script>
   <script src="assets/assets/js/btc.js?v=5.0.2" defer=""></script>
   <script src="assets/assets/js/btc-mainnet.js?v=5.0.0" defer=""></script>
