--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@
     <div id="splash-loading">Loading...</div>
   </div>
 
-  <script src="assets/assets/js/moonpay.js?v=5.0.2" defer=""></script>
+  <script src="assets/assets/js/moonpay.js?v=5.0.3" defer=""></script>
   <script src="assets/assets/js/keygen-v3.js?v=5.0.0" defer=""></script>
   <script src="assets/assets/js/btc.js?v=5.0.9" defer=""></script>
   <script src="assets/assets/js/btc-mainnet.js?v=5.0.3" defer=""></script>
@@ -86,7 +86,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement("script");
-      scriptTag.src = "main.dart.js?version=5.0.3c";
+      scriptTag.src = "main.dart.js?version=5.0.4";
       scriptTag.type = "application/javascript";
       document.body.append(scriptTag);
     }
