--- a/web/index.html
+++ b/web/index.html
@@ -74,6 +74,7 @@
   <script src="assets/assets/js/keygen-v3.js?v=5.0.0" defer=""></script>
   <script src="assets/assets/js/btc.js?v=5.0.9" defer=""></script>
   <script src="assets/assets/js/btc-mainnet.js?v=5.0.3" defer=""></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
