--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,8 @@
   <script src="assets/assets/js/moonpay.js?v=5.0.3" defer=""></script>
   <script src="assets/assets/js/keygen-v3.js?v=5.0.0" defer=""></script>
   <script src="assets/assets/js/btc.js?v=5.0.9" defer=""></script>
-  <script src="assets/assets/js/btc-mainnet.js?v=5.0.3" defer=""></script>
+  <!-- <script src="assets/assets/js/btc-testnet.js?v=5.0.5" defer=""></script> -->
+  <script src="assets/assets/js/btc-mainnet.js?v=5.0.5" defer=""></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -86,7 +87,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement("script");
-      scriptTag.src = "main.dart.js?version=5.0.4f";
+      scriptTag.src = "main.dart.js?version=5.0.4g";
       scriptTag.type = "application/javascript";
       document.body.append(scriptTag);
     }
