--- a/web/index.html
+++ b/web/index.html
@@ -89,7 +89,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement("script");
-      scriptTag.src = "main.dart.js?version=5.0.10d";
+      scriptTag.src = "main.dart.js?version=5.1.0";
       scriptTag.type = "application/javascript";
       document.body.append(scriptTag);
     }
